<resources>
    <string name="app_name">Food of Eugene</string>
    <string name="btn_1">Entrees</string>
    <string name="btn_2">Plats</string>
    <string name="btn_3">Desserts</string>
    <string name="entrees">Entrées</string>
    <string name="plats">plats</string>
    <string name="category"></string>
    <string name="_5_90">5.90€</string>
    <string name="itemTitle">TextView</string>
    <string name="image_api">TODO</string>
    <string name="images_api">images_api</string>
    <string name="itemIngredientView">TextView</string>
    <string name="imageview">TODO</string>
    <string name="tittreitem">TextView</string>
    <string name="ingredientsdetails">TextView</string>
    <string name="logo">Logo</string>
    <string name="ble">BLE</string>
    <string name="play">PLAY</string>
    <string name="textview">BLETtitlr</string>
    <string name="image_view">play</string>
    <string name="ble_scan_play_title">Lancer le scan BLE</string>
    <string name="ble_scan_pause_title">Start BLE en cours...</string>
    <string name="pause">pause</string>
    <string name="devicetitle">Name : </string>
    <string name="carousel">Caroussel</string>
    <string name="button">Button</string>
    <string name="btn_plus">+</string>
    <string name="btn_moins">-</string>
    <string name="pricedetail">price :</string>
    <string name="img_ble" />
    <string name="plus" />
    <string name="moins" />
    <string name="addressDevice">Address::</string>
    <string name="name">Name :</string>
    <string name="address">Address::</string>
    <string name="img_view">TODO</string>
    <string name="description_text">Description Text</string>

    <string name="ble_device_status">Statis : %1$s</string>
    <string name="ble_device_status_connecting">Connexion en cours</string>
    <string name="ble_device_status_connected">Connecté</string>
    <string name="ble_device_status_disconnected">Deconnecté</string>
    <string name="ble_device_status_disconnecting">Deconnexion en cours</string>
    <string name="deviceservicetitle" />
    <string name="deviceservicecharacteristics" />
    <string name="characteristique_specifique">Characteristique Specifique</string>
    <string name="arrowimg" />
    <string name="notifier">Notifier</string>
    <string name="lecture">Lecture</string>
    <string name="ecriture">Ecriture</string>
    <string name="proprietes">Proprietes :</string>
    <string name="uuid">UUID :</string>
    <string name="valeur">Valeur :</string>
</resources>