<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomeActivity"
    tools:ignore="ExtraText">

    <Button
        android:id="@+id/btn_1"
        android:layout_width="176dp"
        android:layout_height="68dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="332dp"
        android:backgroundTint="@color/black"
        android:fontFamily="cursive"
        android:text="@string/btn_1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="147dp"
        android:layout_height="75dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="408dp"
        android:backgroundTint="@color/black"
        android:fontFamily="cursive"
        android:text="@string/btn_2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="244dp"
        android:layout_height="64dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="504dp"
        android:backgroundTint="@color/black"
        android:fontFamily="cursive"
        android:strokeColor="#FF8A80"
        android:text="@string/btn_3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="426dp"
        android:layout_height="398dp"
        android:layout_marginBottom="360dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/food_of_eugene__1_" />

    <ImageView
        android:id="@+id/ble"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="424dp"
        android:contentDescription="@string/img_ble"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_bluetooth_24" />

</androidx.constraintlayout.widget.ConstraintLayout>