<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/deviceservicetitle"
        android:layout_width="237dp"
        android:layout_height="38dp"
        android:text="@string/deviceservicetitle"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/deviceserviceaddress"
        android:layout_width="243dp"
        android:layout_height="37dp"
        android:text="@string/deviceservicecharacteristics"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceservicetitle"
        app:layout_constraintVertical_bias="0.261" />

    <ImageView
        android:id="@+id/arrowimg"
        android:layout_width="63dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/arrowimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/deviceservicetitle"
        app:srcCompat="@drawable/ic_arrow_drop_down_24" />
</androidx.constraintlayout.widget.ConstraintLayout>