<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cellcharacteristic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/characteristiquespecifique"
        android:layout_width="244dp"
        android:layout_height="29dp"
        android:text="@string/characteristique_specifique"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/notifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ecriture"
        app:layout_constraintTop_toTopOf="@+id/ecriture" />

    <Button
        android:id="@+id/lecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/lecture"
        app:layout_constraintEnd_toStartOf="@+id/ecriture"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristiquespecifique" />

    <Button
        android:id="@+id/ecriture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ecriture"
        app:layout_constraintEnd_toStartOf="@+id/notifier"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lecture"
        app:layout_constraintTop_toTopOf="@+id/lecture" />

    <TextView
        android:id="@+id/uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="UUID : "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristiquespecifique" />

    <TextView
        android:id="@+id/proprietes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Proprietes : "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uuid" />

    <TextView
        android:id="@+id/valeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="Valeur : "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proprietes" />
</androidx.constraintlayout.widget.ConstraintLayout>